--- a/app/templates/quiz/grid.hbs
+++ b/app/templates/quiz/grid.hbs
@@ -1,20 +1,8 @@
-<div class="error-page">
-    <h2 class="headline text-info"> <i class="fa fa-cogs text-green"></i></h2>
-    <div class="error-content">
-        <h3>We are on it captain... </h3>
-        <p style="margin: 5px">
-            Hey, Our team is working hard to present you this new feature.
-            So give us some time and mean while you can enjoy rest of the application.
-
-            For any query or feedback, feel free to contact us anytime.
-        </p>
-    </div>
-</div>
-<!-- <div class="row">
+<div class="row">
       <button type="submit" class="btn  btn-info" {{action 'createQuiz' }}> Create Quiz</button>
 </div>
  <div class="row">
    <div class="col-sm-12">
       {{common-grid tableSchema=tableSchema rows=model  rowClickAction="quizClick"}}
     </div>
- </div> -->
+ </div> 
