--- a/app/templates/quiz/play.hbs
+++ b/app/templates/quiz/play.hbs
@@ -17,6 +17,6 @@
        </div><!-- /.box-header -->
        <br>
        <!-- form start -->
-        {{quiz-play items=model.questions saveAnsweredQuestion="saveAnsweredQuestion"}}
+        {{quiz-play items=model.questions quizId=model.id  saveAnsweredQuestion="saveAnsweredQuestion"}}
    </div><!-- /.box -->
 </div>
