--- a/app/templates/quiz/create.hbs
+++ b/app/templates/quiz/create.hbs
@@ -1,23 +1,15 @@
 <!-- left column for grid-->
 <div class="col-md-8">
-    {{common-grid tableSchema=tableSchema rows=rows  rowClickAction="quizClick"}}
+    {{common-grid tableSchema=tableSchema rows=rows rowClickAction="quizClick"}}
 </div>
 <div class="col-md-4">
-  <!-- general form elements -->
-  <!-- /.box-header -->
-      <!-- form start -->
-      <div class="box box-primary">
-          <div class="box-header">
-                </div>
-
-        {{quiz-form      isAdd=true      changeset=changeset      submit="submit"    }}
-
-
- <div class="box-footer">
-        <button type="submit"  class="btn btn-primary {{if changeset.error.lru_files 'has-error'}}" {{action 'submit'}} >save</button>
-       <button  class="btn btn-default" {{action 'cancelAction'}}>Cancel</button>
-
+    <!-- general form elements -->
+    <!-- /.box-header -->
+    <!-- form start -->
+    <div class="box box-primary">
+        <div class="box-header">
+        </div>
+        {{quiz-form isAdd=true changeset=changeset }}
     </div>
-
-          </div><!-- /.box -->
+    <!-- /.box -->
 </div>
