--- a/app/templates/group/view.hbs
+++ b/app/templates/group/view.hbs
@@ -31,6 +31,11 @@
             </button>
           </a>
       {{/if}}
+      {{#link-to 'group.posts' model.id}}
+            <button class="btn btn-default">
+              <i class="fa fa-th text-primary" style="width: 15px; margin: 5px "></i> Posts
+            </button>
+           {{/link-to}}
     </div>
     <!-- /.col-lg-12 -->
 </div>
